[gd_scene load_steps=4 format=3 uid="uid://bmdbm048xrpmm"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_ub0t8"]
[ext_resource type="PackedScene" uid="uid://cmwn78o1aco74" path="res://scenes/ui_scenes/fade_in.tscn" id="2_ief3h"]
[ext_resource type="Script" path="res://scripts/ui/single_player.gd" id="2_s5xjw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ub0t8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.255341, 0.630284, 0.522835, 1)

[node name="Single Player" type="Button" parent="."]
layout_mode = 1
offset_right = 107.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 64
text = "Single Player"
script = ExtResource("2_s5xjw")

[node name="Time Trials" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -48.0
offset_right = 402.0
offset_bottom = 48.0
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Time Trials"

[node name="placeholder" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_right = 402.0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "placeholder or smth
"

[node name="Go Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Go Back"

[node name="FadeIn" parent="." instance=ExtResource("2_ief3h")]

[connection signal="pressed" from="Single Player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Go Back" to="." method="_on_go_back_pressed"]
[connection signal="animation_end" from="FadeIn" to="." method="_on_fade_in_animation_end"]
